2002-02-27  Philippe Elie  <ph_e@club-internet.fr>

	* TODO: upadte:

	* doc/oprofile.1.in:
	* doc/oprofile.sgml:
	* pp/opp_symbol.h:
	* pp/opp_symbol.cpp:
	* pp/oprofpp.cpp: use columned output for oprofpp -L, -s

	* pp/oprofpp.cpp: command-line counter specification
	  was broken by my last patch
	* pp/opf_filter.cpp: ditto but bug comes from the far past

2002-02-26  Philippe Elie  <ph_e@club-internet.fr>

	* pp/op_merge.cpp: small tidy

	* pp/op_time.cpp:
	* pp/opf_container.cpp:
	* pp/opf_filter.h:
	* pp/opf_filter.cpp:
	* pp/oprofpp.cpp:
	* pp/oprofpp.h:
	* pp/oprofpp_util.cpp: remove the nasty global var int ctr;
	  pass it as parameter to each relevant function using it.

	* module/compat.h: support for 2.5.5. 2.4.18 also tested

	* pp/opp_symbol.h
	* pp/opp_symbol.cpp: new, mainly for implementing --output-format
	* pp/op_time.cpp:
	* pp/oprofpp.cpp: use output format stuff
	* pp/Makefile.in: reflect above change
	* doc/oprofile.1.in:
	* doc/oprofile.sgml: document --output-format

2002-02-13  Philippe Elie  <ph_e@club-internet.fr>

	* TODO: update

	* module/compat22.h:
	* module/compat24.h:
	* module/oprofile_nmi.S: small tidy

	* module/op_apic.c:
	* module/op_fixmap.c:
	* module/op_nmi.c:
	* module/oprofile.h: avoid memory leak of apic mapping

2002-02-12  Philippe Elie  <ph_e@club-internet.fr>

	* TODO: update

	* pp/oprofpp_util.cpp: use stable sort and correct the comparison
	  function on symbol vma
	* pp/opf_filter.cpp: remove a boring new line in output

	* module/makefile.in: optimize for 686 but do not use any specific
	  686 insn.

	* configure.in: check against CONFIG_PREEMPT

2002-02-10  John Levon  <moz@compsoc.man.ac.uk>

	* events/op_events_desc.c: remove dead code
 
	* module/compat.h: RedHat backported MODULE_LICENSE()
 
	* module/op_syscalls.c:
	* module/op_util.c: remove FIXMEs
 
2002-02-09  Bob Montgomery  <bobm@fc.hp.com>

	* module/op_rtc.c: right actual RTC value back

	* doc/oprofile.sgml: document that
