@@ -1,3 +1,10 @@
+2002-03-01  John Levon  <moz@compsoc.man.ac.uk>
+
+	* TODO: update
+
+	* module/oprofile.c:
+	* module/op_syscalls.c: merge note/map lock 
+ 
 2002-02-27  Philippe Elie  <ph_e@club-internet.fr>
 
 	* TODO: upadte:
